--- a/style.css
+++ b/style.css
@@ -87,4 +87,14 @@ body {
 }
 
 
+@media (max-width: 672px) {
+    .container{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+
+
+        margin: 5%;
+    }
+}
+
 
