--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
     border-bottom-right-radius: 10px;
 }
 .btn--luxury:hover{
-    background: white;r: hsl(179, 100%, 15%);
+    background: white;
     color: hsl(179, 100%, 14%);
     transition: 0.3s;
 }
